--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,12 @@ p {
     margin: 0 0 30px 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
     margin: 0 0 20px 0;
@@ -186,12 +191,12 @@ h1, h2, h3, h4, h5, h6 {
     white-space: nowrap;
 }
 
-.nav-menu > li {
+.nav-menu>li {
     float: left;
 }
 
-.nav-menu li:hover > ul,
-.nav-menu li.sfHover > ul {
+.nav-menu li:hover>ul,
+.nav-menu li.sfHover>ul {
     display: block;
 }
 
@@ -248,11 +253,11 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
 }
 
-.nav-menu > li {
+.nav-menu>li {
     margin-left: 8px;
 }
 
-.nav-menu > li > a:before {
+.nav-menu>li>a:before {
     content: "";
     position: absolute;
     width: 0;
@@ -265,8 +270,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover:before,
-.nav-menu li:hover > a:before,
-.nav-menu .menu-active > a:before {
+.nav-menu li:hover>a:before,
+.nav-menu .menu-active>a:before {
     visibility: visible;
     width: 100%;
 }
@@ -316,7 +321,7 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 3px;
 }
 
-.nav-menu ul li:hover > a {
+.nav-menu ul li:hover>a {
     background: #f82249;
     color: #fff;
 }
@@ -1453,4 +1458,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     #subscribe button {
         margin-top: 10px;
     }
+}
+
+.hiddenLink,
+.hiddenLink:hover {
+    text-decoration: none;
+    color: white
 }
